code structure 만드는중
